# mopidy-marceline

./: .copier-answers.yml  .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  svelte.config.js
.github/: dependabot.yml
.github/workflows/: cd.yml  ci-js.yml  ci-python.yml
mopidy_marceline/: __init__.py  ext.conf
src/: app.css  app.html
src/lib/: constants.ts  format.ts  hash.ts  lrclib.ts  navigation.ts  sort.ts
src/lib/components/: Lyrics.svelte  Navigation.svelte  Player.svelte  QueueActions.svelte  Search.svelte  Title.svelte  TrackInfo.svelte  TrackList.svelte  TrackListActions.svelte  TrackPreview.svelte
src/lib/components/action/: ButtonActions.svelte  MenuAction.svelte  MenuActions.svelte  albumActions.ts  playlistActions.ts  queueActions.ts  tlTrackActions.ts  tlTracksActions.ts  trackActions.ts  tracksActions.ts
src/lib/components/hero/: AlbumHero.svelte  ArtistHero.svelte  Hero.svelte  InfoChip.svelte  PlaylistHero.svelte  TrackHero.svelte
src/lib/components/item/: AlbumListItem.svelte  ArtistListItem.svelte  DirectoryListItem.svelte  HistoryEntryListItem.svelte  ListItem.svelte  PlaylistListItem.svelte  RefListItem.svelte  TlTrackListItem.svelte  TrackListItem.svelte
src/lib/components/link/: AlbumLink.svelte  ArtistLink.svelte  ArtistsLinks.svelte  DirectoryLink.svelte  Link.svelte  PlaylistLink.svelte  TrackLink.svelte
src/lib/components/list/: AlbumList.svelte  ArtistList.svelte  DirectoryList.svelte  HistoryEntryList.svelte  PlaylistList.svelte  RefList.svelte  TlTrackList.svelte  TrackList.svelte  VirtualList.svelte
src/lib/context/: mopidy.ts  scroll.ts
src/lib/state/: mopidy.svelte.ts
src/lib/types/: action.ts  brand.ts  lrclib.ts  mopidy.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/album/: +page.svelte  +page.ts
src/routes/album/[...album]/: +page.svelte  +page.ts
src/routes/album/[album]/: +page.svelte
src/routes/artist/: +page.svelte  +page.ts
src/routes/artist/[...artist]/: +page.svelte  +page.ts
src/routes/artist/[artist]/: +page.svelte  +page.ts
src/routes/history/: +page.svelte  +page.ts
src/routes/playlist/: +page.svelte  +page.ts
src/routes/playlist/[...playlist]/: +page.svelte  +page.ts
src/routes/track/: +page.svelte  +page.ts
src/routes/track/[...track]/: +page.svelte  +page.ts
src/routes/track/[track]/: +page.svelte  +page.ts
static/: manifest.webmanifest
tests/: test_extension.py
