[project]
name = "Mopidy-Marceline"
description = "Mopidy extension with stylish frontend for controlling playback and browsing"
version = "0.0.4"
readme = "README.md"
requires-python = ">= 3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "João Pereira", email = "me@toino.pt" }]
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = ["mopidy >= 3.4.1", "pykka >= 3.1.1"]

[project.urls]
Repository = "https://github.com/ttoino/mopidy-marceline"

[project.entry-points."mopidy.ext"]
marceline = "mopidy_marceline:Extension"


[build-system]
requires = ["setuptools >= 66"]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "tox",
    { include-group = "build" },
    { include-group = "ruff" },
    { include-group = "tests" },
    { include-group = "typing" },
]
build = ["build"]
ruff = ["ruff"]
tests = ["pytest", "pytest-cov"]
typing = ["pyright"]


[tool.coverage.paths]
source = ["mopidy_marceline/", "*/site-packages/"]

[tool.coverage.run]
source_pkgs = ["mopidy_marceline"]

[tool.coverage.report]
show_missing = true


[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
# Not all dependencies have type hints:
reportMissingTypeStubs = false
# Already covered by ruff's flake8-self checks:
reportPrivateImportUsage = false


[tool.pytest.ini_options]
filterwarnings = [
    # By default, fail tests on warnings from our own code
    "error:::mopidy_marceline",
    #
    # Add any warnings you want to ignore here
]


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Add rules you want to ignore here
    "D",     # pydocstyle
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "TD002", # missing-todo-author
    "TD003", # missing-todo-link
    #
    # Conflicting with `ruff format`
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",  # flake8-unused-arguments
    "D",    # pydocstyle
    "S101", # assert
]


[tool.setuptools]
packages = ["mopidy_marceline"]

[tool.setuptools.package-data]
"*" = ["*.conf", "static/**"]


[tool.tox]
env_list = ["build", "format", "lint", "test", "typecheck"]

[tool.tox.env_run_base]
package = "wheel"
wheel_build_env = ".pkg"

[tool.tox.env.build]
dependency_groups = ["build"]
commands = [["python", "-m", "build", "--wheel", "--sdist"]]

[tool.tox.env.format]
skip_install = true
dependency_groups = ["ruff"]
commands = [["ruff", "format", "--check", "{posargs:.}"]]

[tool.tox.env.lint]
skip_install = true
dependency_groups = ["ruff"]
commands = [["ruff", "check", "{posargs:.}"]]

[tool.tox.test]
dependency_groups = ["tests"]
commands = [
    [
        "pytest",
        "--cov",
        "--basetemp={envtmpdir}",
        { replace = "posargs", extend = true },
    ],
]

[tool.tox.env.typecheck]
dependency_groups = ["typing"]
commands = [["pyright", "{posargs:mopidy_marceline}"]]
